--- a/src/id8_i/configs/flight_tube_devices.yml
+++ b/src/id8_i/configs/flight_tube_devices.yml
@@ -1,6 +1,6 @@
-id8_i.devices.flight_tube.FlightTubeDetector:
+id8_common.devices.flight_tube.FlightTubeDetector:
 - name: "det_motors"
   prefix: "8idiSoft:FLIGHT:"
-id8_i.devices.flight_tube.FlightTubeBeamStop:
+id8_common.devices.flight_tube.FlightTubeBeamStop:
 - name: "bs_motors"
   prefix: "8idiSoft:FLIGHT:"
