--- a/src/id8_i/configs/meascomp_devices.yml
+++ b/src/id8_i/configs/meascomp_devices.yml
@@ -1,7 +1,7 @@
-id8_i.devices.meascomp_usb_ctr.MeasCompCTR:
+id8_common.devices.meascomp_usb_ctr.MeasCompCTR:
   - name: daq1
     prefix: "8idDAQ1:"
 
-id8_i.devices.meascomp_usb_ctr.MeasCompCtrMcs:
+id8_common.devices.meascomp_usb_ctr.MeasCompCtrMcs:
   - name: mcs
     prefix: "8idDAQ1:"
