--- a/src/id8_i/configs/iconfig.yml
+++ b/src/id8_i/configs/iconfig.yml
@@ -1,12 +1,12 @@
 # Configuration for the Bluesky instrument package.
 
 # identify the version of this iconfig.yml file
-ICONFIG_VERSION: 2.0.0
+ICONFIG_VERSION: 2.0.1
 
 # Add additional configuration for use with your instrument.
 
 ### The short name for the databroker catalog.
-DATABROKER_CATALOG: &databroker_catalog temp
+DATABROKER_CATALOG: temp
 
 ### RunEngine configuration
 RUN_ENGINE:
@@ -14,7 +14,6 @@ RUN_ENGINE:
         beamline_id: demo_instrument
         instrument_name: Most Glorious Scientific Instrument
         proposal_id: commissioning
-        databroker_catalog: *databroker_catalog
 
     ### EPICS PV to use for the `scan_id`.
     ### Default: `RE.md["scan_id"]` (not using an EPICS PV)
@@ -28,6 +27,12 @@ RUN_ENGINE:
     ### except when it clutters the output in Jupyter notebooks.
     ### Default: False
     USE_PROGRESS_BAR: false
+
+### Baseline stream
+### When ENABLE=true, all ophyd objects with a "baseline" label
+### will be added to the baseline stream.
+BASELINE_LABEL:
+    ENABLE: true
 
 ### Best Effort Callback Configurations
 ### Defaults: all true
